# RunningIn_DatabaseFunc

./: README.md  critic_x1.pt  critic_z1.pt  decoder1.pt  encoder1.pt  generate_csv.py  getMeasurments.py  meu_arquivo_massflow_A1_csv.csv  oriontest.csv  prototype.ipynb  pyproject.toml  raw2hdf.py  requirements.txt  setup.py  test.py  test_dataset.csv  tester22.csv  train_dataset.csv
MIMICRI/: hdfFull2hdfMIMICRI.py
examples/: hdfFull2hdfMIMICRI.py
initial_test/: TimeFrequencyRunIn.py  critic_x1.pt  critic_z1.pt  decoder1.pt  encoder1.pt  exemple_script_some_functions.py  generate_csv.py  mega_for_bandp.py  novo_arquivo.csv  test_dataset.csv  train_dataset.csv
nntadGAN/: anomalias_visiveis.csv  exchange-2_cpc_results.csv  meu_arquivo_massflow_A1.xlsx  meu_arquivo_x.xlsx - Sheet1.csv  mine_anomaly_detection.py  mine_main_tad.py  mine_model.py  tester2.xlsx  tsttst.py  xlxtestcurrent.py
oriontest/: config.yaml  llll.py  meu_arquivo_massflow_A1_csv.csv  orionnteste.py  tadorionpage.py
pyRInDB/: __init__.py  dbcreate.py  dbsave.py  main_class.py  timeProcessing.py
pyRInDB/pyRInDB.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pyRInDB/utils/: __init__.py  waveformConversion.py
source/: convertDB.py  runInDB_utils.py  timeProcessing.py
tests/: getMeasurments.py  raw2hdf.py  raw2hdf_byfolder.py
