[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRInDB"
version = "0.1.0"
description = "A project for handling and processing HDF5 files for compressor tests with LabVIEW integration."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/LIAE-UFSC/RunningIn_DatabaseFunc"
Repository = "https://github.com/LIAE-UFSC/RunningIn_DatabaseFunc"

[project.dependencies]
h5py = "^3.3.0"
numpy = "^1.21.0"
tqdm = "^4.62.0"
scipy = "^1.7.0"
pandas = "^1.3.0"
typing_extensions = "^3.10.0.0"

[tool.setuptools.packages.find]
where = ["pyRInDB"]

[tool.setuptools.package-data]
"pyRInDB" = ["labview_buildDLL/LV2022_x86/*.vi", "utils/*.dll"]

[tool.setuptools.scripts]
pyRInDB = "pyRInDB.main_class:main"